Alphabetize and fix spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -457,13 +457,12 @@ div.voters {
 .upvoter:before {
 	content: "\25b2";
 	color: transparent;
-	-webkit-text-stroke: 1px var(--color-fg-shape);
 	font-size: 12pt;
-}
+	-webkit-text-stroke: 1px var(--color-fg-shape);}
 .upvoted .upvoter:before,
 .upvoter:hover:before {
-    -webkit-text-stroke: 1px var(--color-fg-accent);
-    color: var(--color-fg-accent);
+   	 color: var(--color-fg-accent);
+	-webkit-text-stroke: 1px var(--color-fg-accent);
 }
 .upvoter {
 	color: var(--color-fg-contrast-4-5);
